libs/modkit-macros-tests/tests/ui/fail/module_name_consecutive_hyphens.stderr
error: module name must not contain consecutive hyphens
 --> tests/ui/fail/module_name_consecutive_hyphens.rs:6:12
  |
6 |     name = "file--parser",  // Should fail: consecutive hyphens
  |            ^^^^^^^^^^^^^^
